Virtual trip integrations